# pesacast

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.changeset/: brave-eagles-ask.md  cool-dragons-carry.md  dirty-ways-tie.md  famous-foxes-retire.md  fluffy-dryers-attend.md  jolly-mangos-sleep.md  mighty-glasses-like.md  nice-dingos-raise.md  seven-memes-design.md  shiny-melons-fail.md  shy-trees-cross.md  smart-paths-change.md  some-icons-fly.md  sparkly-paws-brake.md
.github/workflows/: changesets.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
desktop/: CHANGELOG.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: ble.rs  db.rs  lib.rs  main.rs  model.rs  notifications.rs  ws_server.rs
desktop/src/components/ui/: status-badge.tsx
desktop/src/domains/connection/: bluetooth-section.tsx  constants.ts  types.ts  useBle.ts
desktop/src/domains/persistence/: persistence-settings.tsx  usePersistence.ts
desktop/src/domains/transactions/: export-transactions.tsx  feed.tsx  types.ts  useMpesaTransactions.ts  utils.ts  webhook-push.tsx
desktop/src/domains/updater/: update-banner.tsx  use-updater.ts
desktop/src/hooks/: use-notification-permission.ts  use-theme.ts
scripts/: sync-android-version.mjs
(+28 files in other folders)
